--- a/amazon.html
+++ b/amazon.html
@@ -16,6 +16,7 @@
     <!-- Here are the CSS files for this page. -->
     <link rel="stylesheet" href="styles/shared/general.css">
     <link rel="stylesheet" href="styles/shared/amazon-header.css">
+    <link rel="stylesheet" href="styles/shared/amazon-footer.css">
     <link rel="stylesheet" href="styles/pages/amazon.css">
   </head>
   <body>
@@ -55,6 +56,94 @@
       <div class="products-grid js-prodcuts-grid">
       </div>
     </div>
+
+    <footer class="footer">
+      <div class="footer-top">
+          <a href="#top" class="back-to-top">Back to top</a>
+      </div>
+
+      <div class="footer-links">
+          <div class="footer-column">
+              <h3>Get to Know Us</h3>
+              <ul>
+                  <li><a href="#">Careers</a></li>
+                  <li><a href="#">Blog</a></li>
+                  <li><a href="#">About Amazon</a></li>
+                  <li><a href="#">Investor Relations</a></li>
+                  <li><a href="#">Amazon Devices</a></li>
+                  <li><a href="#">Amazon Science</a></li>
+              </ul>
+          </div>
+          <div class="footer-column">
+              <h3>Make Money with Us</h3>
+              <ul>
+                  <li><a href="#">Sell on Amazon</a></li>
+                  <li><a href="#">Sell Your Services on Amazon</a></li>
+                  <li><a href="#">Sell on Amazon Business</a></li>
+                  <li><a href="#">Sell Your Apps on Amazon</a></li>
+                  <li><a href="#">Become an Affiliate</a></li>
+                  <li><a href="#">Advertise Your Products</a></li>
+                  <li><a href="#">Self-Publish with Us</a></li>
+                  <li><a href="#">Host an Amazon Hub</a></li>
+              </ul>
+          </div>
+          <div class="footer-column">
+              <h3>Amazon Payment Products</h3>
+              <ul>
+                  <li><a href="#">Amazon Rewards Visa Signature Cards</a></li>
+                  <li><a href="#">Amazon Store Card</a></li>
+                  <li><a href="#">Amazon Secured Card</a></li>
+                  <li><a href="#">Amazon Business Card</a></li>
+                  <li><a href="#">Amazon Business Line of Credit</a></li>
+                  <li><a href="#">Shop with Points</a></li>
+                  <li><a href="#">Credit Card Marketplace</a></li>
+                  <li><a href="#">Reload Your Balance</a></li>
+                  <li><a href="#">Amazon Currency Converter</a></li>
+              </ul>
+          </div>
+          <div class="footer-column">
+              <h3>Let Us Help You</h3>
+              <ul>
+                  <li><a href="#">Amazon and COVID-19</a></li>
+                  <li><a href="#">Your Account</a></li>
+                  <li><a href="#">Your Orders</a></li>
+                  <li><a href="#">Shipping Rates & Policies</a></li>
+                  <li><a href="#">Amazon Prime</a></li>
+                  <li><a href="#">Returns & Replacements</a></li>
+                  <li><a href="#">Manage Your Content and Devices</a></li>
+                  <li><a href="#">Amazon Assistant</a></li>
+                  <li><a href="#">Help</a></li>
+              </ul>
+          </div>
+      </div>
+
+      <div class="footer-bottom">
+          <div class="footer-logo">
+              <a href="#">
+                <a href="amazon.html" class="header-link">
+                  <img class="amazon-logo"
+                    src="images/amazon-logo-white.png">
+                  <img class="amazon-mobile-logo"
+                    src="images/amazon-mobile-logo-white.png">
+                </a>
+              </a>
+          </div>
+          <div class="footer-bottom-links">
+              <a href="#">English</a>
+              <a href="#">USD - U.S. Dollar</a>
+              <a href="#">United States</a>
+          </div>
+      </div>
+
+      <div class="footer-legal">
+          <ul>
+              <li><a href="#">Conditions of Use</a></li>
+              <li><a href="#">Privacy Notice</a></li>
+              <li><a href="#">Interest-Based Ads</a></li>
+              <li>&copy; 2024, YourWebsite.com, Inc. or its affiliates</li>
+          </ul>
+      </div>
+  </footer>
 
     <script type="module" src="scripts/amazon.js"></script>
   </body>
