--- a/orders.html
+++ b/orders.html
@@ -45,7 +45,7 @@
 
         <a class="cart-link header-link" href="checkout.html">
           <img class="cart-icon" src="images/icons/cart-icon.png">
-          <div class="cart-quantity">3</div>
+          <div class="cart-quantity js-cart-quantity"></div>
           <div class="cart-text">Cart</div>
         </a>
       </div>
@@ -53,7 +53,6 @@
 
     <div class="main">
       <div class="page-title">Your Orders</div>
-
       <div class="orders-grid js-orders-grid"></div>
     </div>
 
