--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <body>
     <div class="amazon-header">
       <div class="amazon-header-left-section">
-        <a href="amazon.html" class="header-link">
+        <a href="index.html" class="header-link">
           <img class="amazon-logo"
             src="images/amazon-logo-white.png">
           <img class="amazon-mobile-logo"
@@ -120,7 +120,7 @@
       <div class="footer-bottom">
           <div class="footer-logo">
               <a href="#">
-                <a href="amazon.html" class="header-link">
+                <a href="index.html" class="header-link">
                   <img class="amazon-logo"
                     src="images/amazon-logo-white.png">
                   <img class="amazon-mobile-logo"
